--- a/package.json
+++ b/package.json
@@ -29,17 +29,13 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-openid-connect": "^2.7.2",
-    "express-partials": "^0.3.0",
-    "lodash": "^4.17.15",
     "neo4j-driver": "*",
-    "nodemon": "^1.3.3",
-    "serve": "^13.0.2"
+    "nodemon": "^1.3.3"
   },
   "pkg": {
     "assets": [
       "views/**/*",
-      "public/**/*",
-      "node_modules/**/*"
+      "public/**/*"
     ]
   }
 }
