--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "express": "^4.18.1",
     "express-openid-connect": "^2.7.2",
     "neo4j-driver": "*",
-    "nodemon": "^1.3.3"
+    "nodemon": "^1.3.3",
+    "opener": "^1.5.2"
   },
   "pkg": {
     "assets": [
       "views/**/*",
-      "public/**/*"
+      "public/**/*",
+      "node_modules/**/*"
     ]
   }
 }
